; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_spi-efm32.c_efm32_spi_write32.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_spi-efm32.c_efm32_spi_write32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efm32_spi_ddata = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.efm32_spi_ddata*, i32, i32)* @efm32_spi_write32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @efm32_spi_write32(%struct.efm32_spi_ddata* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.efm32_spi_ddata*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.efm32_spi_ddata* %0, %struct.efm32_spi_ddata** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.efm32_spi_ddata*, %struct.efm32_spi_ddata** %4, align 8
  %9 = getelementptr inbounds %struct.efm32_spi_ddata, %struct.efm32_spi_ddata* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %6, align 4
  %12 = add i32 %10, %11
  %13 = call i32 @writel_relaxed(i32 %7, i32 %12)
  ret void
}

declare dso_local i32 @writel_relaxed(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
